Edited the my favourite things README file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Check out <a href="http://moringaschool.co
     m/">Moringa School</a>. Its a great place to learn web development skills!</p>
     <p>Here's an additional link to my <a href="http//:favorite-things.com/">favorite things</a></p>
-  <img src="images/elephants.jpeg" alt="A photo of an elephant">
+  <img src="images/.jpeg" alt="A photo of ">
   </body>
 </html>
