--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1>Favourite Things</h1>
     <p>Welcome to this page that takes you through a tour of my favourite things!</p>
-    <p>Check out <a href="http://moringaschool.co
-    m/">Moringa School</a>. Its a great place to learn web development skills!</p>
-    <p>Here's an additional link to my <a href="http//:favorite-things.com/">favorite things</a></p>
-  <img src="images/.jpeg" alt="A photo of ">
-  </body>
+  <img src="images/flintgettinghisfeetwet.jpg" alt="Flint gets his feet wet">
+    <p>Check out <a href="http://moringaschool.com">Moringa School</a>.Its a great place to learn web development skills!and a new favourite thing too!</p>
+    <img src="images/flintxl.jpg" alt="A photo of Lockwood being awed">
+    <p>Here's an additional link to my <a href="http://Portfolio-Page.com/">Portfolio Page</a></p>
+ </body>
 </html>
