Updated the hyperlinked websites to the live gh-page link(s) inorder to activate them

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <img src="images/flintgettinghisfeetwet.jpg" alt="Flint gets his feet wet">
     <p>Check out <a href="http://moringaschool.com">Moringa School</a>.Its a great place to learn web development skills!and a new favourite thing too!</p>
     <img src="images/flintxl.jpg" alt="A photo of Lockwood being awed">
-    <p>Here's an additional link to my <a href="http://Portfolio-Page.com/">Portfolio Page</a></p>
+    <p>Here's an additional link to my <a href="http://mwendantu-castdynamic.github.io/PortFolio">Portfolio Page</a></p>
  </body>
 </html>
